# dag-as-config

./: .gitignore  README.md  main.py  pyproject.toml  theme_settings.json  user_settings.json
dags/tenant_a/: dag_loader.py
dags/tenant_a/sql/zoom/: create_customer_summary.sql
dags/tenant_a/yml_definitions/: ee.yml  zoom.yml
tests/: conftest.py  test_snowflake_dag.py  test_tenant_a_dag_loader.py  test_tenant_b_dag_loader.py
